# makerpg-django

./: .gitignore  manage.py  pyproject.toml
CharacterCreator/: models.py  views.py
CharacterCreator/static/CharacterCreator/: index.css
CharacterCreator/templates/: index.html
MakeRPG/: asgi.py  settings.py  urls.py  wsgi.py
src/: globals.py  write_cc_fixture.py
src/systems/: aces_and_eights.yaml  cyberpunk_2020.yaml  fae.yaml  mindjammer.yaml
