[tool.poetry]
name = "makerpg-django"
version = "3.0.0"
description = ""
authors = ["Eric Earl <eric.earl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.1.3"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]
ipython = "^8.29.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
